feat: vite project PWA설정 추가

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <link rel="icon" type="image/svg+xml" href="/Yeogi.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>여기갈래 | 투표 기반 AI 여행 일정 생성 서비스</title>
+    <!-- iOS 지원을 위한 메타 태그 -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="여기갈래">
+    
+    <!-- iOS 아이콘 -->
+    <link rel="apple-touch-icon" href="/icon192.png">
+    
+    <!-- 테마 색상 -->
+    <meta name="theme-color" content="#0A0A0A">
   </head>
   <body>
     <div id="root"></div>
